--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     {
       "matches": ["https://*.youtube.com/*"],
       "css": ["styles.css"],
-      "js": ["content-script.js"]
+      "js": ["content-script.js"],
+      "all_frames": true
     }
   ],
 "action": {}
